# ferrite

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
aiChangeLog/: fix-checkpoint-compaction.md  phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-101.md  phase-102.md  phase-103.md  phase-104.md  phase-105.md  phase-106.md  phase-107.md  phase-108.md  phase-109.md  phase-11.md  phase-110.md  phase-111.md  phase-112.md  phase-113.md  phase-114.md  phase-115.md  phase-116.md  phase-117.md  phase-118.md  phase-119.md  phase-12.md  phase-120.md  phase-121.md  phase-122.md  phase-123.md  phase-124.md  phase-125.md  phase-13.md  (+82 more)
config/: signatures.toml  smart_thresholds.toml
crates/ferrite-artifact/: Cargo.toml
crates/ferrite-artifact/src/: engine.rs  export.rs  lib.rs  scanner.rs
crates/ferrite-artifact/src/scanners/: credit_card.rs  email.rs  iban.rs  mod.rs  ssn.rs  url.rs  win_path.rs
crates/ferrite-blockdev/: Cargo.toml
crates/ferrite-blockdev/src/: aligned.rs  error.rs  file.rs  lib.rs  linux.rs  mock.rs  volume_guard.rs  windows.rs
crates/ferrite-carver/: Cargo.toml
crates/ferrite-carver/src/: carver_io.rs  error.rs  lib.rs  post_validate.rs  pre_validate.rs  scan_search.rs  scanner.rs  signature.rs  size_hint.rs
crates/ferrite-carver/src/post_validate/: binary_validators.rs  file_validators.rs  mod.rs  structural_validators.rs  tests.rs  tests_binary.rs
crates/ferrite-carver/src/size_hint/: adts.rs  asf.rs  au.rs  ebml.rs  elf.rs  gif.rs  helpers.rs  iso9660.rs  isobmff.rs  jpeg.rs  linear.rs  midi.rs  mod.rs  mpeg_ps.rs  mpeg_ts.rs  ogg.rs  ole2.rs  pdf.rs  pe.rs  png.rs  rar.rs  seven_zip.rs  sqlite.rs  tar.rs  tests.rs  text_bound.rs  tiff.rs  ttf.rs
crates/ferrite-carver/tests/: size_hints.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: config.rs  error.rs  lib.rs  thermal.rs  types.rs
crates/ferrite-filesystem/: Cargo.toml
crates/ferrite-filesystem/src/: apfs.rs  detect.rs  error.rs  exfat.rs  ext4.rs  ext4_dir.rs  ext4_tests.rs  fat32.rs  io.rs  lib.rs  ntfs.rs  ntfs_helpers.rs  offset_device.rs  profile.rs
crates/ferrite-imaging/: Cargo.toml
crates/ferrite-imaging/src/: config.rs  engine.rs  error.rs  hash.rs  lib.rs  mapfile.rs  mapfile_io.rs  progress.rs  space_check.rs  sparse.rs  thermal.rs  write_blocker.rs
crates/ferrite-imaging/src/passes/: copy.rs  mod.rs  retry.rs  scrape.rs  sweep.rs  trim.rs
crates/ferrite-partition/: Cargo.toml
crates/ferrite-partition/src/: error.rs  gpt.rs  lib.rs  mbr.rs  reconstruct.rs  scanner.rs  types.rs
crates/ferrite-smart/: Cargo.toml
crates/ferrite-smart/src/: error.rs  lib.rs  parser.rs  runner.rs  thresholds.rs  types.rs  verdict.rs
crates/ferrite-textcarver/: Cargo.toml
crates/ferrite-textcarver/src/: classifier.rs  engine.rs  export.rs  lib.rs  scanner.rs
crates/ferrite-tui/: Cargo.toml
crates/ferrite-tui/src/: app.rs  carving_session.rs  lib.rs  session.rs
crates/ferrite-tui/src/screens/: carving.rs  drive_select.rs  file_browser.rs  fs_recovery.rs  health.rs  hex_viewer.rs  hex_viewer_tests.rs  imaging.rs  mod.rs  partition.rs  quick_recover.rs  report.rs  session_manager.rs
crates/ferrite-tui/src/screens/artifacts/: input.rs  mod.rs  render.rs
crates/ferrite-tui/src/screens/carving/: checkpoint.rs  events.rs  extract.rs  helpers.rs  input.rs  mod.rs  preview.rs  preview_more.rs  render.rs  render_progress.rs  session_ops.rs  user_sig_panel.rs  user_sigs.rs
crates/ferrite-tui/src/screens/imaging/: mod.rs  render.rs
crates/ferrite-tui/src/screens/text_scan/: input.rs  mod.rs  render.rs
docs/: architecture.md  data-recovery-engineer-feature-plan.md  enhancement-backlog.md  ferrite-feature-roadmap.md  user-manual.md
docs/adr/: ADR-001-pure-rust.md  ADR-002-tui-first.md
docs/design/: App-Research.md
docs/ideas/: artifact-carving-name-correlation.md
scripts/: analyze_carved.ps1  compare_carve.ps1  fix_signatures.py  hash_compare_carve.ps1
scripts/release/: tag-release.ps1
src/: main.rs
