[workspace]
members = [
    ".",
    "crates/ferrite-core",
    "crates/ferrite-blockdev",
    "crates/ferrite-imaging",
    "crates/ferrite-smart",
    "crates/ferrite-partition",
    "crates/ferrite-filesystem",
    "crates/ferrite-carver",
    "crates/ferrite-artifact",
    "crates/ferrite-textcarver",
    "crates/ferrite-tui",
]
resolver = "2"

[workspace.package]
version    = "0.2.0"
edition    = "2021"
authors    = ["arozz7"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/arozz7/ferrite"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow    = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# TUI
ratatui   = "0.29"
crossterm = "0.28"

# Image decoding
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif"] }

# Utilities
uuid      = { version = "1", features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
byteorder = "1"
crc32fast = "1"
memchr    = "2"
rayon     = "1"
regex     = "1"
sha2      = "0.10"
fs2       = "0.4"
whatlang  = "0.16"
filetime  = "0.2"
which     = "7"

# Internal crates
ferrite-core     = { path = "crates/ferrite-core" }
ferrite-blockdev = { path = "crates/ferrite-blockdev" }
ferrite-imaging  = { path = "crates/ferrite-imaging" }
ferrite-smart    = { path = "crates/ferrite-smart" }
ferrite-partition    = { path = "crates/ferrite-partition" }
ferrite-filesystem   = { path = "crates/ferrite-filesystem" }
ferrite-carver       = { path = "crates/ferrite-carver" }
ferrite-artifact     = { path = "crates/ferrite-artifact" }
ferrite-textcarver   = { path = "crates/ferrite-textcarver" }
ferrite-tui          = { path = "crates/ferrite-tui" }

# Dev / test utilities
tempfile = "3"

[package]
name        = "ferrite"
description = "Autonomous storage diagnostics and data recovery"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
ferrite-core       = { workspace = true }
ferrite-tui        = { workspace = true }
