[package]
name              = "ferrite-carver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrite-blockdev = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
memchr           = { workspace = true }
rayon            = { workspace = true }
crc32fast        = { workspace = true }

[dev-dependencies]
ferrite-blockdev = { workspace = true }
