[package]
name        = "ferrite-imaging"
description = "Multi-pass ddrescue-style disk imaging engine for Ferrite"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
ferrite-core     = { workspace = true }
ferrite-blockdev = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
tracing          = { workspace = true }
sha2             = { workspace = true }
fs2              = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[dev-dependencies]
tempfile = { workspace = true }
