[package]
name              = "ferrite-textcarver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrite-blockdev = { workspace = true }
tracing          = { workspace = true }
thiserror        = { workspace = true }
whatlang         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
