[package]
name              = "ferrite-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrite-core       = { workspace = true }
ferrite-blockdev   = { workspace = true }
ferrite-smart      = { workspace = true }
ferrite-imaging    = { workspace = true }
ferrite-partition  = { workspace = true }
ferrite-filesystem = { workspace = true }
ferrite-carver     = { workspace = true }
ferrite-artifact     = { workspace = true }
ferrite-textcarver   = { workspace = true }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
image              = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
sha2               = { workspace = true }
chrono             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
fs2                = { workspace = true }
filetime           = { workspace = true }
whatlang           = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = { workspace = true }
